-bug#0000599: add filtering to graphs and data templates
-bug#0000603: user_log.ip field not ipv6 compatible
-bug#0000608: Minor coding error in lib/poller.php with a erroneous pclose statement 
-bug#0000615: Minor host.php tweak
-bug#0000619: Host Templates not alphabetized on device creation form
-bug#0000625: Cannot modify/create a user with a period in the username
-bug: Stop MySQL connect messages from appearing in user interface
-bug: Allow primary keys other than "ID" from saving properly in function sql_save
-bug: Allow primary keys other than "ID" to be handled properly using the html code
-bug: Make PHP timeout more rapidly, allow more time for concurrent PHP poller processes to start
-bug: Save statistics even when the poller times out.
-bug: Only call poller_commands.php or poller_export.php if they require calling.
-bug: Incorporate a timeout to ss_fping.php so that a host that takes to long to finish at least returns data
-bug: Correct the display of custom data in data input methods to follow the proper order
-bug: Change the default behavior of ping.php to mark a host as up if either snmp or ping are successful.
-bug: Don't allow graph_export to delete your web site.
-bug: Correct issue where snmp was not returning hex data and some text data.
-bug: Prevent a never ending table lock in lib/tree.php
-bug: Correct issue where either AREA or LINEx without color were causing RRD_NL without any elements in rrdtool_graph.
-bug: Fix ordering issues with Data Input methods and Graph Creation for Custom Data
-bug: Allow hostname to include TCP: or UDP: an keep tcp, icmp, udp ping functional
-feature: Add IPv6 support to lib/ping.php
-feature: When utilizing cmd.php, don't run the script_server if it is not required for a process.
-feature: Incorporate snmpbulkwalk binary to user interface to speed snmpv2 & snmpv3 walk calls.
-feature: Added support for new 95th Percentile Variables: aggregate, aggregate_max, aggregate_sum

0.8.6g